--- a/assets/helper.html
+++ b/assets/helper.html
@@ -8,7 +8,7 @@
 	<a href="home_page.html" target="MAIN" class="home_page">цкюбмюъ ярпюмхжю</a>
 	<a href="joining.html" target="MAIN" class="joining">бярсохрэ</a>
 	<a href="support.html" target="MAIN" class="support">онддепфйю</a>
-	<a href="hell.html" target="MAIN"><img src="img/button_before.png" class="button" id="button"
+	<a href="achievements.html" target="MAIN"><img src="img/button_before.png" class="button" id="button"
 	onMouseOver="document.getElementById('button').src='img/button_after.png'"
 	onMouseOut="document.getElementById('button').src='img/button_before.png'"></a>
 </h4>
