--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<frame name="HEAD" src="assets/head.html" noresize scrolling="NO">
 		<frameset cols="20%, *">
 		<frame name="HELPER" src="assets/helper.html" noresize scrolling="NO">
-		<frame name="MAIN" src="assets/home_page.html" noresize scrolling="NO">
+		<frame name="MAIN" src="assets/home_page.html">
 		</frameset>
 	</frameset>
 </head>
