--- a/assets/helper.html
+++ b/assets/helper.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>helper</title>
 	<link href="css/style_helper.css" rel="stylesheet" type="text/css">
 </head>
