--- a/assets/support.html
+++ b/assets/support.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>support</title>
 	<link href="css/style_main.css" rel="stylesheet" type="text/css">
 </head>
