--- a/assets/head.html
+++ b/assets/head.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 	<title>head</title>
 	<link href="css/style_head.css" rel="stylesheet" type="text/css">
