--- a/assets/head.html
+++ b/assets/head.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 	<title>head</title>
 	<link href="css/style_head.css" rel="stylesheet" type="text/css">
