--- a/assets/achievements.html
+++ b/assets/achievements.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8">
+	<meta charset="windows-1251"/>
 	<title>achievements</title>
 	<link href="css/style_main.css" rel="stylesheet" type="text/css">
 </head>
