--- a/assets/achievements.html
+++ b/assets/achievements.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="windows-1251"/>
+	<meta charset="UTF-8">
 	<title>achievements</title>
 	<link href="css/style_main.css" rel="stylesheet" type="text/css">
 </head>
