--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>CourseWork</title>
 </head>
 	<frameset rows="30%, *" frameborder="0" framespacing="0">
