--- a/assets/achievements.html
+++ b/assets/achievements.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
+	<meta charset="UTF-8 без BOM">
 	<title>achievements</title>
 	<link href="css/style_main.css" rel="stylesheet" type="text/css">
 </head>
@@ -12,7 +12,7 @@
 	<br><img src="img/horse.jpg"></p>
 	<p class="achievements">Его Злодейшиство решил принять участие в масленице
 	<br><img src="img/maslenitsa.png"></p>
-	<p class="achievements">Ежегодные лекции от Профессора Кумамона
+	<p class="achievements">Ежегодные лекции от профессора Кумамона
 	<br><img src="img/training.jpg"></p>
 	<p class="achievements">Первая встреча представителей двух различных пантеонов
 	<br><img src="img/rise.jpg"></p>
