--- a/assets/helper.html
+++ b/assets/helper.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8 без BOM">
+	<meta charset="UTF-8 BOM">
 	<title>helper</title>
 	<link href="css/style_helper.css" rel="stylesheet" type="text/css">
 </head>
