--- a/assets/home_page.html
+++ b/assets/home_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8 BOM">
+	<meta charset="UTF BOM">
 	<title>home page</title>
 	<link href="css/style_main.css" rel="stylesheet" type="text/css">
 </head>
