--- a/assets/achievements.html
+++ b/assets/achievements.html
@@ -1,20 +1,20 @@
-<!DOCTYPE html>
+п»ї<!DOCTYPE html>
 <html>
 <head>
-	<meta charset="BOM">
+	<meta charset="UTF-8">
 	<title>achievements</title>
 	<link href="css/style_main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<p class="achievements">Первое пришествие нашего Властителя
+	<p class="achievements">РџРµСЂРІРѕРµ РїСЂРёС€РµСЃС‚РІРёРµ РЅР°С€РµРіРѕ Р’Р»Р°СЃС‚РёС‚РµР»СЏ
 	<br><img src="img/for_the_glory_of_satan_of_course.jpg"></p>
-	<p class="achievements">Владыка Кумамон отправился по делам на своём личном транспорте - адском пони
+	<p class="achievements">Р’Р»Р°РґС‹РєР° В РљСѓРјР°РјРѕРЅ РѕС‚РїСЂР°РІРёР»СЃСЏ РїРѕ РґРµР»Р°Рј РЅР° СЃРІРѕС‘Рј Р»РёС‡РЅРѕРј С‚СЂР°РЅСЃРїРѕСЂС‚Рµ - Р°РґСЃРєРѕРј РїРѕРЅРё
 	<br><img src="img/horse.jpg"></p>
-	<p class="achievements">Его Злодейшиство решил принять участие в масленице
+	<p class="achievements">Р•РіРѕ Р—Р»РѕРґРµР№С€РёСЃС‚РІРѕ СЂРµС€РёР» РїСЂРёРЅСЏС‚СЊ СѓС‡Р°СЃС‚РёРµ РІ РјР°СЃР»РµРЅРёС†Рµ
 	<br><img src="img/maslenitsa.png"></p>
-	<p class="achievements">Ежегодные лекции от профессора Кумамона
+	<p class="achievements">Р•Р¶РµРіРѕРґРЅС‹Рµ Р»РµРєС†РёРё РѕС‚ РїСЂРѕС„РµСЃСЃРѕСЂР° В РљСѓРјР°РјРѕРЅР°
 	<br><img src="img/training.jpg"></p>
-	<p class="achievements">Первая встреча представителей двух различных пантеонов
+	<p class="achievements">РџРµСЂРІР°СЏ РІСЃС‚СЂРµС‡Р° РїСЂРµРґСЃС‚Р°РІРёС‚РµР»РµР№ РґРІСѓС… СЂР°Р·Р»РёС‡РЅС‹С… РїР°РЅС‚РµРѕРЅРѕРІ
 	<br><img src="img/rise.jpg"></p>
 </body>
 </html>
