--- a/assets/helper.html
+++ b/assets/helper.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF BOM">
+	<meta charset="UTF-8">
 	<title>helper</title>
 	<link href="css/style_helper.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <h4>
-	<a href="home_page.html" target="MAIN" class="home_page">цкюбмюъ ярпюмхжю</a>
-	<a href="joining.html" target="MAIN" class="joining">бярсохрэ</a>
-	<a href="support.html" target="MAIN" class="support">онддепфйю</a>
+	<a href="home_page.html" target="MAIN" class="home_page">п⌠п⌡п░п▓п²п░п╞ п║п╒п═п░п²п≤п╕п░</a>
+	<a href="joining.html" target="MAIN" class="joining">п▓п║п╒пёп÷п≤п╒п╛</a>
+	<a href="support.html" target="MAIN" class="support">п÷п·п■п■п∙п═п√п п░</a>
 	<a href="achievements.html" target="MAIN"><img src="img/button_before.png" class="button" id="button"
 	onMouseOver="document.getElementById('button').src='img/button_after.png'"
 	onMouseOut="document.getElementById('button').src='img/button_before.png'"></a>
