--- a/assets/home_page.html
+++ b/assets/home_page.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF BOM">
+	<meta charset="UTF-8">
 	<title>home page</title>
 	<link href="css/style_main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<p>Ты, тот, кто осмелился перейти на этот сайт, пади ниц и восславь Великого Помощника Сатаны – Кумамона.
-	 Святая дева или грязный носок, неважно, теперь ты ничто, просто пылинка на чёрной шкуре
-	 Великого Властителя Кумамона.
-	 Миллионы последователей, сотни тысяч погибших – это лишь частичка истинной силы нашего Властителя.
-	 Он, тот чьё имя можно называть, представ перед нами, ничтожными, продемонстрировал своё великолепие и грацию,
-	 сжигая врагов его Господина, Сатаны, на костре, что возвышался выше небес.
-	 В тот день он молвил: “WHY? FOR THE GLORY OF SATAN OF COURSE!”.</p>
+	<p>РўС‹, С‚РѕС‚, РєС‚Рѕ РѕСЃРјРµР»РёР»СЃСЏ РїРµСЂРµР№С‚Рё РЅР° СЌС‚РѕС‚ СЃР°Р№С‚, РїР°РґРё РЅРёС† Рё РІРѕСЃСЃР»Р°РІСЊ Р’РµР»РёРєРѕРіРѕ РџРѕРјРѕС‰РЅРёРєР° РЎР°С‚Р°РЅС‹ вЂ“ РљСѓРјР°РјРѕРЅР°.
+	 РЎРІСЏС‚Р°СЏ РґРµРІР° РёР»Рё РіСЂСЏР·РЅС‹Р№ РЅРѕСЃРѕРє, РЅРµРІР°Р¶РЅРѕ, С‚РµРїРµСЂСЊ С‚С‹ РЅРёС‡С‚Рѕ, РїСЂРѕСЃС‚Рѕ РїС‹Р»РёРЅРєР° РЅР° С‡С‘СЂРЅРѕР№ С€РєСѓСЂРµ
+	 Р’РµР»РёРєРѕРіРѕ Р’Р»Р°СЃС‚РёС‚РµР»СЏ РљСѓРјР°РјРѕРЅР°.
+	 РњРёР»Р»РёРѕРЅС‹ РїРѕСЃР»РµРґРѕРІР°С‚РµР»РµР№, СЃРѕС‚РЅРё С‚С‹СЃСЏС‡ РїРѕРіРёР±С€РёС… вЂ“ СЌС‚Рѕ Р»РёС€СЊ С‡Р°СЃС‚РёС‡РєР° РёСЃС‚РёРЅРЅРѕР№ СЃРёР»С‹ РЅР°С€РµРіРѕ Р’Р»Р°СЃС‚РёС‚РµР»СЏ.
+	 РћРЅ, С‚РѕС‚ С‡СЊС‘ РёРјСЏ РјРѕР¶РЅРѕ РЅР°Р·С‹РІР°С‚СЊ, РїСЂРµРґСЃС‚Р°РІ РїРµСЂРµРґ РЅР°РјРё, РЅРёС‡С‚РѕР¶РЅС‹РјРё, РїСЂРѕРґРµРјРѕРЅСЃС‚СЂРёСЂРѕРІР°Р» СЃРІРѕС‘ РІРµР»РёРєРѕР»РµРїРёРµ Рё РіСЂР°С†РёСЋ,
+	 СЃР¶РёРіР°СЏ РІСЂР°РіРѕРІ РµРіРѕ Р“РѕСЃРїРѕРґРёРЅР°, РЎР°С‚Р°РЅС‹, РЅР° РєРѕСЃС‚СЂРµ, С‡С‚Рѕ РІРѕР·РІС‹С€Р°Р»СЃСЏ РІС‹С€Рµ РЅРµР±РµСЃ.
+	 Р’ С‚РѕС‚ РґРµРЅСЊ РѕРЅ РјРѕР»РІРёР»: вЂњWHY? FOR THE GLORY OF SATAN OF COURSE!вЂќ.</p>
 </body>
 </html>
