--- a/assets/joining.html
+++ b/assets/joining.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF BOM">
+	<meta charset="UTF-8">
 	<title>joining</title>
 	<link href="css/style_main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<p>Что же, похоже, что даже такую пустую душонку, как ты, притягивает обаяние нашего Властителя.
-	 Пусть ты и изволил присоединиться к нам, но не стоит думать, что ты стал кем-то особенным,
-	 ты всё еще остаёшься мелким червём в земле, что лежит под пушистыми лапками нашего Властителя.
-	<br>Теперь, для того, чтобы вступить к нам, вы должны:
+	<p>Р§С‚Рѕ Р¶Рµ, РїРѕС…РѕР¶Рµ, С‡С‚Рѕ РґР°Р¶Рµ С‚Р°РєСѓСЋ РїСѓСЃС‚СѓСЋ РґСѓС€РѕРЅРєСѓ, РєР°Рє С‚С‹, РїСЂРёС‚СЏРіРёРІР°РµС‚ РѕР±Р°СЏРЅРёРµ РЅР°С€РµРіРѕ Р’Р»Р°СЃС‚РёС‚РµР»СЏ.
+	 РџСѓСЃС‚СЊ С‚С‹ Рё РёР·РІРѕР»РёР» РїСЂРёСЃРѕРµРґРёРЅРёС‚СЊСЃСЏ Рє РЅР°Рј, РЅРѕ РЅРµ СЃС‚РѕРёС‚ РґСѓРјР°С‚СЊ, С‡С‚Рѕ С‚С‹ СЃС‚Р°Р» РєРµРј-С‚Рѕ РѕСЃРѕР±РµРЅРЅС‹Рј,
+	 С‚С‹ РІСЃС‘ РµС‰Рµ РѕСЃС‚Р°С‘С€СЊСЃСЏ РјРµР»РєРёРј С‡РµСЂРІС‘Рј РІ Р·РµРјР»Рµ, С‡С‚Рѕ Р»РµР¶РёС‚ РїРѕРґ РїСѓС€РёСЃС‚С‹РјРё Р»Р°РїРєР°РјРё РЅР°С€РµРіРѕ Р’Р»Р°СЃС‚РёС‚РµР»СЏ.
+	<br>РўРµРїРµСЂСЊ, РґР»СЏ С‚РѕРіРѕ, С‡С‚РѕР±С‹ РІСЃС‚СѓРїРёС‚СЊ Рє РЅР°Рј, РІС‹ РґРѕР»Р¶РЅС‹:
 	<ol>
-	<li>Вы должны переписать все ваше имущество на имя Великого Кумамона
-	 и переслать все ваши сбережения на наш счёт XXXX-XXXX-XXXX-XXXX;</li>
-	<li>После выполнения первого пункта, позвоните на номер +7-XXX-XXX-XX-XX.
-	 Вам сообщат, в какое время к вам прибудет наш сотрудник для извлечения вашей души;</li>
-	<li>Для завершения регистрации и официального вступления, вам необходимо будет внести
-	 членский взнос в размере 1XXXXXX евро. В последующем, чтобы продолжать являться членом нашего общества,
-	 вы должны будете платить 1XXXXXXX евро каждый месяц.</li>
+	<li>Р’С‹ РґРѕР»Р¶РЅС‹ РїРµСЂРµРїРёСЃР°С‚СЊ РІСЃРµ РІР°С€Рµ РёРјСѓС‰РµСЃС‚РІРѕ РЅР° РёРјСЏ Р’РµР»РёРєРѕРіРѕ РљСѓРјР°РјРѕРЅР°
+	 Рё РїРµСЂРµСЃР»Р°С‚СЊ РІСЃРµ РІР°С€Рё СЃР±РµСЂРµР¶РµРЅРёСЏ РЅР° РЅР°С€ СЃС‡С‘С‚ XXXX-XXXX-XXXX-XXXX;</li>
+	<li>РџРѕСЃР»Рµ РІС‹РїРѕР»РЅРµРЅРёСЏ РїРµСЂРІРѕРіРѕ РїСѓРЅРєС‚Р°, РїРѕР·РІРѕРЅРёС‚Рµ РЅР° РЅРѕРјРµСЂ +7-XXX-XXX-XX-XX.
+	 Р’Р°Рј СЃРѕРѕР±С‰Р°С‚, РІ РєР°РєРѕРµ РІСЂРµРјСЏ Рє РІР°Рј РїСЂРёР±СѓРґРµС‚ РЅР°С€ СЃРѕС‚СЂСѓРґРЅРёРє РґР»СЏ РёР·РІР»РµС‡РµРЅРёСЏ РІР°С€РµР№ РґСѓС€Рё;</li>
+	<li>Р”Р»СЏ Р·Р°РІРµСЂС€РµРЅРёСЏ СЂРµРіРёСЃС‚СЂР°С†РёРё Рё РѕС„РёС†РёР°Р»СЊРЅРѕРіРѕ РІСЃС‚СѓРїР»РµРЅРёСЏ, РІР°Рј РЅРµРѕР±С…РѕРґРёРјРѕ Р±СѓРґРµС‚ РІРЅРµСЃС‚Рё
+	 С‡Р»РµРЅСЃРєРёР№ РІР·РЅРѕСЃ РІ СЂР°Р·РјРµСЂРµ 1XXXXXX РµРІСЂРѕ. Р’ РїРѕСЃР»РµРґСѓСЋС‰РµРј, С‡С‚РѕР±С‹ РїСЂРѕРґРѕР»Р¶Р°С‚СЊ СЏРІР»СЏС‚СЊСЃСЏ С‡Р»РµРЅРѕРј РЅР°С€РµРіРѕ РѕР±С‰РµСЃС‚РІР°,
+	 РІС‹ РґРѕР»Р¶РЅС‹ Р±СѓРґРµС‚Рµ РїР»Р°С‚РёС‚СЊ 1XXXXXXX РµРІСЂРѕ РєР°Р¶РґС‹Р№ РјРµСЃСЏС†.</li>
 	</ol>
 </p>
 </body>
