--- a/assets/support.html
+++ b/assets/support.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF BOM">
+	<meta charset="UTF-8">
 	<title>support</title>
 	<link href="css/style_main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<p>Если у вас возникли какие-либо вопросы, то вы всегда можете позвонить нам. Наши сотрудники,
-	 знаменитые демоны из книги “ Лемегетон”, прошли квалифицированные курсы и являются профессионалами в своём деле.
-	 Они всегда выслушают вас и дадут необходимые советы для решения вашей проблемы.
-	<br>Второй помощник по связям с ничтожествами, Герцог Агарес:
+	<p>Р•СЃР»Рё Сѓ РІР°СЃ РІРѕР·РЅРёРєР»Рё РєР°РєРёРµ-Р»РёР±Рѕ РІРѕРїСЂРѕСЃС‹, С‚Рѕ РІС‹ РІСЃРµРіРґР° РјРѕР¶РµС‚Рµ РїРѕР·РІРѕРЅРёС‚СЊ РЅР°Рј. РќР°С€Рё СЃРѕС‚СЂСѓРґРЅРёРєРё,
+	 Р·РЅР°РјРµРЅРёС‚С‹Рµ РґРµРјРѕРЅС‹ РёР· РєРЅРёРіРё вЂњ Р›РµРјРµРіРµС‚РѕРЅвЂќ, РїСЂРѕС€Р»Рё РєРІР°Р»РёС„РёС†РёСЂРѕРІР°РЅРЅС‹Рµ РєСѓСЂСЃС‹ Рё СЏРІР»СЏСЋС‚СЃСЏ РїСЂРѕС„РµСЃСЃРёРѕРЅР°Р»Р°РјРё РІ СЃРІРѕС‘Рј РґРµР»Рµ.
+	 РћРЅРё РІСЃРµРіРґР° РІС‹СЃР»СѓС€Р°СЋС‚ РІР°СЃ Рё РґР°РґСѓС‚ РЅРµРѕР±С…РѕРґРёРјС‹Рµ СЃРѕРІРµС‚С‹ РґР»СЏ СЂРµС€РµРЅРёСЏ РІР°С€РµР№ РїСЂРѕР±Р»РµРјС‹.
+	<br>Р’С‚РѕСЂРѕР№ РїРѕРјРѕС‰РЅРёРє РїРѕ СЃРІСЏР·СЏРј СЃ РЅРёС‡С‚РѕР¶РµСЃС‚РІР°РјРё, Р“РµСЂС†РѕРі РђРіР°СЂРµСЃ:
 	<br>+7-XXX-XXX-XX-XX
-	<br>Девятый консультант, Король Пеймон:
+	<br>Р”РµРІСЏС‚С‹Р№ РєРѕРЅСЃСѓР»СЊС‚Р°РЅС‚, РљРѕСЂРѕР»СЊ РџРµР№РјРѕРЅ:
 	<br>+7-XXX-XXX-XX-XX
-	<br>Четырнадцатый специалист в области унижений, Маркиз Лерайе:
+	<br>Р§РµС‚С‹СЂРЅР°РґС†Р°С‚С‹Р№ СЃРїРµС†РёР°Р»РёСЃС‚ РІ РѕР±Р»Р°СЃС‚Рё СѓРЅРёР¶РµРЅРёР№, РњР°СЂРєРёР· Р›РµСЂР°Р№Рµ:
 	<br>+7-XXX-XXX-XX-XX
-	<br>Тридцать первый консультант-губитель, Губернатор Форас:
+	<br>РўСЂРёРґС†Р°С‚СЊ РїРµСЂРІС‹Р№ РєРѕРЅСЃСѓР»СЊС‚Р°РЅС‚-РіСѓР±РёС‚РµР»СЊ, Р“СѓР±РµСЂРЅР°С‚РѕСЂ Р¤РѕСЂР°СЃ:
 	<br>+7-XXX-XXX-XX-XX
-	<br>Пятьдесят четвёртый скупщик душ, Граф и Герцог Мурмур:
+	<br>РџСЏС‚СЊРґРµСЃСЏС‚ С‡РµС‚РІС‘СЂС‚С‹Р№ СЃРєСѓРїС‰РёРє РґСѓС€, Р“СЂР°С„ Рё Р“РµСЂС†РѕРі РњСѓСЂРјСѓСЂ:
 	<br>+7-XXX-XXX-XX-XX</p>
 </body>
 </html>
